[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "icde-openenv"
version = "0.1.0"
description = "Incident Command Decision Environment - OpenEnv benchmark"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.uv]
dev-dependencies = []
